--- a/tictactoe_nb.ipynb
+++ b/tictactoe_nb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -352,7 +352,7 @@
       " _ _ _ \n",
       " _ _ _ \n",
       "\n",
-      "['DID YOU KNOW I BEAT THE BEST NORTH KOREAN PLAYER?']\n",
+      "['WELCOME TO YOUR NIGHTMARE']\n",
       " _ _ _ \n",
       " _ _ _ \n",
       " _ _ _ \n",
@@ -368,9 +368,29 @@
     "    g = Game()\n",
     "\n",
     "# def __init__(s, player, alpha = None, gamma = None):\n",
+    "p1 = Learner(player = 1, alpha = 0.2,gamma = 0)\n",
+    "p2 = Learner(player = 2, alpha = 0.2,gamma = 0)\n",
+    "g2 = Game(learner = p2,other=p1)\n",
+    "\n",
     "p1 = Learner(player = 1, alpha = 0.5,gamma = 0.3)\n",
     "p2 = Learner(player = 2, alpha = 0.5,gamma = 0.3)\n",
-    "g2 = Game(learner = p1,other=p2)"
+    "g2 = Game(learner = p2,other=p1)\n",
+    "\n",
+    "p1 = Learner(player = 1, alpha = 0.5,gamma = 0.3)\n",
+    "p2 = Learner(player = 2, alpha = 0.5,gamma = 0.3)\n",
+    "g2 = Game(learner = p2,other=p1)\n",
+    "\n",
+    "p1 = Learner(player = 1, alpha = 0.5,gamma = 0.3)\n",
+    "p2 = Learner(player = 2, alpha = 0.5,gamma = 0.3)\n",
+    "g2 = Game(learner = p2,other=p1)\n",
+    "\n",
+    "p1 = Learner(player = 1, alpha = 0.5,gamma = 0.3)\n",
+    "p2 = Learner(player = 2, alpha = 0.5,gamma = 0.3)\n",
+    "g2 = Game(learner = p2,other=p1)\n",
+    "\n",
+    "p1 = Learner(player = 1, alpha = 0.5,gamma = 0.3)\n",
+    "p2 = Learner(player = 2, alpha = 0.5,gamma = 0.3)\n",
+    "g2 = Game(learner = p2,other=p1)"
    ]
   },
   {
@@ -402,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -449,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -460,7 +480,8 @@
     "# red dashes, blue squares and green triangles\n",
     "plt.plot(range(1,len(g2.sp.valuesave[2]) + 1), g2.sp.valuesave[2], 'r-', \n",
     "         range(1,len(g2.sp.valuesave[18]) + 1), g2.sp.valuesave[18], 'b-', \n",
-    "         range(1,len(g2.sp.valuesave[6]) + 1), g2.sp.valuesave[6], 'g-')\n",
+    "         range(1,len(g2.sp.valuesave[6]) + 1), g2.sp.valuesave[6], 'g-',\n",
+    "         range(1,len(g2.sp.valuesave[162]) + 1), g2.sp.valuesave[162], 'y-')\n",
     "plt.show()"
    ]
   }
