--- a/QLearningApplications.Rmd
+++ b/QLearningApplications.Rmd
@@ -23,23 +23,21 @@ In this section, we present similar variations of the Q-learning algorithm for o
 The Pacman AI describes a state using a vector of features. These are functions from states to real numbers (often 0/1) that capture important properties of the state: distance to closest ghost, distance to closest dot, number of ghosts, $1/(distance to dot)^2$, is Pacman in a tunnel? (0/1). This information is used to find which actions usually result in good outcomes, and which result in bad. So if in the current state there is a food pellet above the AI, and the AI moves up to eat the food pellet, it will remember that, in this state, moving up was a good decision because its score increased. The game is played repeatedly to build a table of memories so the robot gets better. 
 
 ###Financial trading
-It is possible to automatically evaluate the best course of A action amoung buy, sell, and stay out. This is done from experience and without knowing the environment in advance. Here, different value functions can be optimized: internal profit, sharp  ratio,  derivative  sharp  ratio. The selection of a particular one is important to achieve a stable learning algorithm in the value iteration, especially applied when the environement is unstable. Also, learning in parallel the environment's variables variance is reported by Du et al. (2009) to lead to better performance in the algorithm than that with stationary and fixed value functions. 
+It is possible to automatically evaluate the best course of n actions among buying, selling, and staying out. This is done from experience and without knowing the environment in advance. For this, different value functions can be optimized: internal profit, sharp  ratio,  derivative  sharp  ratio. The selection of the right value function is important to achieve a stable learning algorithm, especially applied when the environement is unstable. Also, learning in parallel the variance of environment's variables is reported by Du et al. (2009) to lead to better performance in the algorithm than that with stationary and fixed value functions. 
 
 ###Intelligent anti-tank mines
-Mine-carying robots have been designed with sensors determining the location of enemy tanks within a certain radius so they compute the object's direction and velocity. Based on these computations, two perceptual triggers are initialized: CAN_INTERCEPT and NEAR. If CAN_INTERCEPT is TRUE, the robot chooses the action intercept. If NEAR is TRUE, it chooses the action terminate. Otherwise it chooses to wait. The robot is rewarded if a tank is destroyed after a termination action. The perceptual triggers are reevaluated accordingly to the history of rewards. 
+Mine-carying robots have been designed with sensors determining enemy tanks' direction and velocity. Based on this, two perceptual triggers are initialized: CAN_INTERCEPT and NEAR. If CAN_INTERCEPT is TRUE, the robot chooses the action INTERCEPT. If NEAR is TRUE, it chooses the action TERMINATE. Otherwise it chooses WAIT. The robot is rewarded if a tank is destroyed after a termination action. The perceptual triggers are reevaluated accordingly to the history of rewards. 
 
 ##Q-learning with approximations
-Q-learning might loose viability with increasing sizes of state or action space of the monitored system. It is possible to use function approximations to allow working in infinite state spaces and speed up learning in finite state spaces.
+Q-learning might loose viability with applications having too large state sizes or action spaces. To solve this problem, some applications use function approximations speeding up the learning in finite state spaces. It even allows to work in infinite state spaces.
 
 ###Backgammon
-Artificial neural networks as a function approximator are a way to deal with this challenge. They are implemented in Tesauro's Backgammon player using temporal difference learning, an unsupervised technique in which the learning agent learns to predict the expected value of a variable occurring at the end of a sequence of states. It is useful for backgammon, a non-deterministic game with smooth and continuous state space where similar board positions have similar values. In deterministic games, such as chess, a small difference in board position can have large consequences for the state value. 
+Artificial neural networks as a function approximator are an example of function approximation. They are implemented in Tesauro's backgammon player using temporal difference learning, an unsupervised technique in which the agent learns to predict the expected value of a variable occurring at the end of a sequence of states. It is useful for such non-deterministic game with smooth and continuous state space where similar board positions have similar values. In deterministic games, such as chess, a small difference in board position can have large consequences for the state value. 
 
 ###Deepmind
-A recent application by Google DeepMind merged Q-learning with deep learning, titled "deep reinforcement learning" or "deep Q-networks", has been successful at playing some Atari 2600 games at expert human levels. 
+A recent application by Google DeepMind merged Q-learning with deep learning. Titled "deep reinforcement learning" or "deep Q-networks", it was able to beat humans on Atari games. An astonishing fact is that the agent, actually receiving only the pixels and the game score as inputs, was able to surpass the performance of all previous algorithms and achieve a level comparable to that of a professional human tester across a set of 49 games, using the same algorithm, network architecture and hyperparameters. 
 
-It uses a deep Q-network, that, mimicking humans, can learn successful policies directly from high-dimensional sensory inputs using end-to-end reinforcement learning. For this, for each round, the network has as many loss functions as there are potential actions to reach the objective state. To avoid getting stuck in loops and/or local minima, the loss functions are evaluated as the averaged value of different (and not always optimal in a greedy perspective) tries.
-
-The deep Q-network agent, actually receiving only the pixels and the game score as inputs, was able to surpass the performance of all previous algorithms and achieve a level comparable to that of a professional human tester across a set of 49 games, using the same algorithm, network architecture and hyperparameters. 
+The algorithm uses a deep Q-network, that, mimicking humans, uses Q-learning to learn successful policies directly from high-dimensional sensory inputs, thanks to Deep learning. In particular, for each round, the network has as many loss functions as there are potential actions to reach the objective state. Also, to avoid getting stuck in loops and/or local minima, the loss functions are evaluated as the averaged value of different (and not always optimal in a greedy perspective) tries.
 
 #References
 http://cs229.stanford.edu/proj2009/LvDuZhai.pdf
