--- a/QLearningApplications.Rmd
+++ b/QLearningApplications.Rmd
@@ -1,11 +1,11 @@
 #Functioning of the code
-This section describes the code contained in the Appendix. This code is largely based on the implementation of the [Innohead team](sites.google.com/a/innohead.com/wiki/Home/Python/reinforcement-learning---tic-tac-toe0). Although, we adjusted some parameters and added others to augment the depth of our experimental analysis. We also enhanced the GUI.
+This section describes the code contained in the Appendix. The code is largely based on the implementation of the [Innohead team](sites.google.com/a/innohead.com/wiki/Home/Python/reinforcement-learning---tic-tac-toe0). Though, we adjusted some parameters and added others to augment the depth of our experimental analysis. ALso we enhanced the GUI (graphical user interface).
 
-The general structure of the code is organized around classes. These are Python structure containing functions and objects that can belong to the class' environement or to the global environment.
+The general structure of the code is organized around classes. They are Python structures containing both functions and objects that can belong to the class' environement or to the global environment. Classes allow for functions and variables which are closely related to each other to be stores in one place and thus interact more easily. 
 
-The class State is creating the actual game board with values as they are displayed (_, X, and O) and the corresponding values that are recognized by the learner algorithm (No Play, Player 1, Player 2). For this, it takes as input the current actions of the players and fills the table accordingly. It also contains the functions returning whether one of the players won the game and one looking if the board is full. 
+The class **State** is creating the actual board with the visual representaion of the values (_, X, and O) and their corresponding tuple keys recognized by the learner algorithm (No Play, Player 1, Player 2). The object takes as input the current actions of the players and fills the table accordingly. It also contains two additional functions. One of them returns whether one of the players won the game and the other one the game checks if the board is full. 
 
-The class Learner is the most important in the code. It contains the function enumerating the possible actions left available for a player at a given state. It also contains the function evaluating the gain of a particular state. In particular, the gain of a win is 1, a loss is 0, and an intermediate state is 0.1. The function next_action is pivotal as it determines what will be the next move of the AI. The next move corresponds to the action which, according to past experience, has the highest value, a function of the gain. The latter is computed by another part of the code; more precisely, the value of the previous state is set after evaluating the result of the last action. Compared to the original code, we also added the a parameter allowing for more or less randomness is 'next action' decision process. When end-up with the standard Q-learning iteration:
+The class **Learner** is the most important in the code. It contains the function which enumerates all available actions for a player at a given state. Another function in this class evaluates the gain of a particular state. In particular, the reward of a win is 1, of a loss is -1, and of a tie is 0. The function next_action is pivot as it determines what will be the next move of the AI. The next move corresponds to the action which, according to past experience, has the highest value, a function of the gain. The latter is computed by another part of the code; more precisely, the value of the previous state is set after evaluating the result of the last action. Compared to the original code, we also added the a parameter allowing for more or less randomness is 'next action' decision process. When end-up with the standard Q-learning iteration:
 $$value(lastState) = (1-\alpha)intermediateValue(lastState) + \alpha value(newState)$$
 
 The class Game is in charge of the display of the information to the human player. This is also where we choose to let the AI to train against itself and for how many games. This is also thanks to this class that we record where the players choose to play.
