--- a/QLearningApplications.Rmd
+++ b/QLearningApplications.Rmd
@@ -5,14 +5,14 @@ The general structure of the code is organized around classes. They are Python s
 
 The class **State** is creating the actual board with the visual representaion of the values (_, X, and O) and their corresponding tuple keys recognized by the learner algorithm (No Play, Player 1, Player 2). The object takes as input the current actions of the players and fills the table accordingly. It also contains two additional functions. One of them returns whether one of the players won the game and the other one the game checks if the board is full. 
 
-The class **Learner** is the most important in the code. It contains the function which enumerates all available actions for a player at a given state. Another function in this class evaluates the gain of a particular state. In particular, the reward of a win is 1, of a loss is -1, and of a tie is 0. The function next_action is pivot as it determines what will be the next move of the AI. The next move corresponds to the action which, according to past experience, has the highest value, a function of the gain. The latter is computed by another part of the code; more precisely, the value of the previous state is set after evaluating the result of the last action. Compared to the original code, we also added the a parameter allowing for more or less randomness is 'next action' decision process. When end-up with the standard Q-learning iteration:
+The class **Learner** is the most important in the code. It contains the function which enumerates all available actions for a player at a given state. Another function in this class evaluates the gain of a particular state. In particular, the reward of a win is 1, of a loss is -1, and of a tie is 0. The function next_action is pivot as it determines what will be the next move of the AI. The next move corresponds to the action which, according to the past experience, has the highest value, a function of the value. The value is computed by another part of the code. More precisely, the value of a state is updating using the value of the next state after evaluating the result of the last action. We have also enriched the original code by adding a parameter allowing more or less for randomness in the 'next action' decision process. Whe end-up with the standard Q-learning iteration:
 $$value(lastState) = (1-\alpha)intermediateValue(lastState) + \alpha value(newState)$$
 
-The class Game is in charge of the display of the information to the human player. This is also where we choose to let the AI to train against itself and for how many games. This is also thanks to this class that we record where the players choose to play.
+The class **Game** is in charge of the display of the information to the human player. This is also where we choose to let the AI to train against itself and we can specify for how many games as well. Owning to this class we can also record where the players choose to play in the board.
 
-The class Selfplay creates the oponent player and make two AIs play against each other. The aim is to prepare the AI to play (well) against a human player. We also use this class to evaluate how an AI is performing and how its sequences of actions are converging with different sets of parameters. We discuss that in the next section.
+The class **Selfplay** creates the oponent player and make two AIs play against each other. The aim is to prepare the AI to play (well) against a human player. We also use this class to evaluate how an AI is performing and how its sequences of actions are converging to the optimal strategy with different sets of parameters. We discuss that in the next section.
 
-While playing the game, the human user is allowed to train the AI with N games with the function g.selfplay(N). Typically after this first step, it is possible to play the game with the call g(i,j) where i is the row of a tic-tac-toe board, and j is the column.
+While playing the game, the human user is allowed to train the AI with N games with the function g.selfplay(N), where N is a natural number. To play the game call the function g(i,j) which enable you to position your mark on the tic-tac-toe board - i is the row and j is the column.
 
 #Q-learning applications review
 
