--- a/QLearningApplications.Rmd
+++ b/QLearningApplications.Rmd
@@ -3,7 +3,7 @@ This section describes the code contained in the Appendix. The code is largely b
 
 The general structure of the code is organized around classes. They are Python structures containing both functions and objects that can belong to the class' environement or to the global environment. Classes allow for functions and variables which are closely related to each other to be stores in one place and thus interact more easily. 
 
-The class **State** is creating the actual board with the visual representaion of the values (_, X, and O) and their corresponding tuple keys recognized by the learner algorithm (No Play, Player 1, Player 2). The object takes as input the current actions of the players and fills the table accordingly. It also contains two additional functions. One of them returns whether one of the players won the game and the other one the game checks if the board is full. 
+The class **State** is creating the actual board with the visual representaion of the values ( _ , X, and O) and their corresponding tuple keys recognized by the learner algorithm (No Play, Player 1, Player 2). The object takes as input the current actions of the players and fills the table accordingly. It also contains two additional functions. One of them returns whether one of the players won the game and the other one the game checks if the board is full. 
 
 The class **Learner** is the most important in the code. It contains the function which enumerates all available actions for a player at a given state. Another function in this class evaluates the gain of a particular state. In particular, the reward of a win is 1, of a loss is -1, and of a tie is 0. The function next_action is pivot as it determines what will be the next move of the AI. The next move corresponds to the action which, according to the past experience, has the highest value, a function of the value. The value is computed by another part of the code. More precisely, the value of a state is updating using the value of the next state after evaluating the result of the last action. We have also enriched the original code by adding a parameter allowing more or less for randomness in the 'next action' decision process. Whe end-up with the standard Q-learning iteration:
 $$value(lastState) = (1-\alpha)intermediateValue(lastState) + \alpha value(newState)$$
@@ -20,10 +20,10 @@ While playing the game, the human user is allowed to train the AI with N games w
 In this section, we present similar variations of the Q-learning algorithm for other applications.
 
 ###Pacman
-The Pacman AI describes a state using a vector of features. These are functions from states to real numbers (often 0/1) that capture important properties of the state: distance to closest ghost, distance to closest dot, number of ghosts, $1/(distance to dot)^2$, is Pacman in a tunnel? (0/1). This information is used to find which actions usually result in good outcomes, and which result in bad. So if in the current state there is a food pellet above the AI, and the AI moves up to eat the food pellet, it will remember that, in this state, moving up was a good decision because its score increased. The game is played repeatedly to build a table of memories so the robot gets better. 
+The Pacman AI describes a state using a vector of features. The vector actually capture multiple different states simultaneously. The vector entries are real numbers, often 0/1, which are calculated by functions that capture important properties of the state: distance to closest ghost, distance to closest dot, number of ghosts, $1/(distance to dot)^2$, is Pacman in a tunnel? (0/1 example). This information is used to find which actions usually result in good outcomes, and which result in bad. So if in the current state there is a food pellet above the AI, and the AI moves up to eat the food pellet, it will remember that, in this state, moving up and eating the food pellet was a good decision because its score increased. As in the tic-tac-toe exanple, the game is played repeatedly to build a table of memories so the robot gets better. 
 
 ###Financial trading
-It is possible to automatically evaluate the best course of n actions among buying, selling, and staying out. This is done from experience and without knowing the environment in advance. For this, different value functions can be optimized: internal profit, sharp  ratio,  derivative  sharp  ratio. The selection of the right value function is important to achieve a stable learning algorithm, especially applied when the environement is unstable. Also, learning in parallel the variance of environment's variables is reported by Du et al. (2009) to lead to better performance in the algorithm than that with stationary and fixed value functions. 
+It is possible to automatically evaluate the best course of n actions among buying, selling, and staying out (do not do anything). This again is done using algorithm's experience and without any prior knowledge of the environment in advance. The Q-learning algorithm is achieved by optimizing different value functions: internal profit, sharp  ratio,  derivative  sharp  ratio. The selection of the right value functions is important to achieve a stable learning algorithm, especially if the environement is unstable. Also, we learn by adding additional parameter the variance of the environment's variables. It is reported by Du et al. (2009) that this approach leads to better performance in the algorithm than even the that with stationary and fixed value functions. 
 
 ###Intelligent anti-tank mines
 Mine-carying robots have been designed with sensors determining enemy tanks' direction and velocity. Based on this, two perceptual triggers are initialized: CAN_INTERCEPT and NEAR. If CAN_INTERCEPT is TRUE, the robot chooses the action INTERCEPT. If NEAR is TRUE, it chooses the action TERMINATE. Otherwise it chooses WAIT. The robot is rewarded if a tank is destroyed after a termination action. The perceptual triggers are reevaluated accordingly to the history of rewards. 
