--- a/QLearningApplications.Rmd
+++ b/QLearningApplications.Rmd
@@ -23,21 +23,21 @@ In this section, we present similar variations of the Q-learning algorithm for o
 The Pacman AI describes a state using a vector of features. The vector actually capture multiple different states simultaneously. The vector entries are real numbers, often 0/1, which are calculated by functions that capture important properties of the state: distance to closest ghost, distance to closest dot, number of ghosts, $1/(distance to dot)^2$, is Pacman in a tunnel? (0/1 example). This information is used to find which actions usually result in good outcomes, and which result in bad. So if in the current state there is a food pellet above the AI, and the AI moves up to eat the food pellet, it will remember that, in this state, moving up and eating the food pellet was a good decision because its score increased. As in the tic-tac-toe exanple, the game is played repeatedly to build a table of memories so the robot gets better. 
 
 ###Financial trading
-It is possible to automatically evaluate the best course of n actions among buying, selling, and staying out (do not do anything). This again is done using algorithm's experience and without any prior knowledge of the environment in advance. The Q-learning algorithm is achieved by optimizing different value functions: internal profit, sharp  ratio,  derivative  sharp  ratio. The selection of the right value functions is important to achieve a stable learning algorithm, especially if the environement is unstable. Also, we learn by adding additional parameter the variance of the environment's variables. It is reported by Du et al. (2009) that this approach leads to better performance in the algorithm than even the that with stationary and fixed value functions. 
+It is possible to automatically evaluate the best course of n actions among buying, selling, and staying out (do not do anything). This again is done using algorithm's experience and without any prior knowledge of the environment in advance. The Q-learning algorithm is achieved by optimizing different value functions: internal profit, sharp  ratio,  derivative  sharp  ratio. The selection of the right value functions is important to achieve a stable learning algorithm, especially if the environement is unstable. Also, we add auxilary parameter in order to learn the value function - the variance of the environment's variables. It is reported by Du et al. (2009) that this approach leads to better performance in the algorithm  even than the performance achieved using stationary and fixed value functions. 
 
 ###Intelligent anti-tank mines
-Mine-carying robots have been designed with sensors determining enemy tanks' direction and velocity. Based on this, two perceptual triggers are initialized: CAN_INTERCEPT and NEAR. If CAN_INTERCEPT is TRUE, the robot chooses the action INTERCEPT. If NEAR is TRUE, it chooses the action TERMINATE. Otherwise it chooses WAIT. The robot is rewarded if a tank is destroyed after a termination action. The perceptual triggers are reevaluated accordingly to the history of rewards. 
+Mine-carying robots have been designed with sensors determining enemy tanks' direction and velocity (the state). Based on this, two perceptual triggers (actions) are initialized: CAN_INTERCEPT and NEAR. If CAN_INTERCEPT is TRUE, then the robot chooses the action INTERCEPT. If NEAR is TRUE, it chooses the action TERMINATE. Otherwise it chooses WAIT. The robot is rewarded if a tank is destroyed after a termination action. The perceptual triggers are reevaluated accordingly to the history of rewards. 
 
 ##Q-learning with approximations
-Q-learning might loose viability with applications having too large state sizes or action spaces. To solve this problem, some applications use function approximations speeding up the learning in finite state spaces. It even allows to work in infinite state spaces.
+Q-learning might loose viability with applications having too large state sizes or action spaces. To solve this problem, some applications use function approximations speeding up the learning by providing finite state spaces. There is even possible to work in infinite state spaces.
 
 ###Backgammon
-Artificial neural networks as a function approximator are an example of function approximation. They are implemented in Tesauro's backgammon player using temporal difference learning, an unsupervised technique in which the agent learns to predict the expected value of a variable occurring at the end of a sequence of states. It is useful for such non-deterministic game with smooth and continuous state space where similar board positions have similar values. In deterministic games, such as chess, a small difference in board position can have large consequences for the state value. 
+Artificial neural networks are an example of function approximation. They are implemented in Tesauro's backgammon player using TD learning. It is useful for non-deterministic game with smooth and continuous state space where similar board positions have similar values. In contrast, in deterministic games, such as chess, a small difference in board position can have large consequences for the state value. 
 
 ###Deepmind
-A recent application by Google DeepMind merged Q-learning with deep learning. Titled "deep reinforcement learning" or "deep Q-networks", it was able to beat humans on Atari games. An astonishing fact is that the agent, actually receiving only the pixels and the game score as inputs, was able to surpass the performance of all previous algorithms and achieve a level comparable to that of a professional human tester across a set of 49 games, using the same algorithm, network architecture and hyperparameters. 
+A recent application by Google DeepMind merged Q-learning with deep learning. Titled "deep reinforcement learning" or "deep Q-networks", it was able to beat humans on Atari games. An astonishing fact is that the agent, actually receiving only the pixel information and the game score as inputs, was able to surpass the performance of all previous algorithms. Actually it achieves a level comparable to that of a professional human tester across a set of 49 games, using the same algorithm, network architecture and hyperparameters. 
 
-The algorithm uses a deep Q-network, that, mimicking humans, uses Q-learning to learn successful policies directly from high-dimensional sensory inputs, thanks to Deep learning. In particular, for each round, the network has as many loss functions as there are potential actions to reach the objective state. Also, to avoid getting stuck in loops and/or local minima, the loss functions are evaluated as the averaged value of different (and not always optimal in a greedy perspective) tries.
+The Q-network algorithm combines both the successes of the Q-learning policy research and the Deep Learning ability to map high-dimentional inputs to simpler spaces. In particular, for each game play, the network has as many loss functions as there are potential actions to reach the objective state. Also, to avoid getting stuck in loops and/or local minima, the loss functions are evaluated as the averaged value of different (and not always optimal in a greedy perspective) tries.
 
 #References
 http://cs229.stanford.edu/proj2009/LvDuZhai.pdf
